# dokustatus

./: .dockerignore  .gitignore  .task-state  AGENTS.md  CHANGELOG-96701d3.md  Cargo.toml  README.md  agent_loop.py  agent_loop.sh  build-and-deploy-to-prod.sh  build-and-deploy-ui-to-prod.sh  build-images.sh  docker-compose.yml  run
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/demo_api/: Dockerfile  package.json  tsconfig.json
apps/demo_ui/: .env.example  Dockerfile  next.config.js  package.json
apps/ui/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
docs/billing/: API_SURFACE.md  DATA_MODEL.md  DECISIONS.md  EDGE_CASES.md  FLOWS.md  OVERVIEW.md  README.md  STATE_MACHINES.md
docs/vision/: 01-product-overview.md  02-architecture.md  03-data-model.md  04-sdk-integration.md  05-hosted-ui.md  06-phase-1-mvp.md  07-phase-2-growth.md  08-pricing.md  README.md
infra/: .env.example  .gitignore  README.md  compose.yml  deploy.sh
infra/caddy/: Caddyfile
libs/reauth-sdk-rs/: Cargo.toml  README.md
libs/reauth-sdk-rs/src/: client.rs  error.rs  extract.rs  lib.rs
libs/reauth-sdk-ts/: README.md  package.json  tsconfig.json  tsup.config.ts
libs/reauth-types/: Cargo.toml
libs/reauth-types/src/: claims.rs  crypto.rs  errors.rs  lib.rs  responses.rs  subscription.rs
local_infra/: setup-certs.sh
local_infra/caddy/: Caddyfile
local_infra/coredns/: Corefile  db.test
workspace/plans/: PLAN-0001-ES256-Per-Domain-JWT-Signing-with-JWKS-Endpoint.md  PLAN-0014-unify-payment-mode-enums.md
(+378 files in other folders)
