[workspace]
resolver = "2"
members = [
    "apps/api",
    "libs/reauth-types",
    "libs/reauth-sdk-rs",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.18.0", features = ["serde", "v4"] }

# Crypto
jsonwebtoken = "9"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"

# Errors
thiserror = "2.0"
