[package]
name = "reauth-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust SDK for Reauth authentication"

[features]
default = ["client"]
client = ["dep:reqwest"]

[dependencies]
reauth-types = { path = "../reauth-types" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
