[package]
name = "reauth-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared types and crypto primitives for Reauth authentication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
